# Cooperative-mobile-robots

./: frames.gv
devel/: .catkin  _setup_util.py  setup.sh
devel/include/dreambot/: CombinedPathStatus.h  ControlAction.h  ControlActionFeedback.h  ControlActionGoal.h  ControlActionResult.h  ControlFeedback.h  ControlGoal.h  ControlResult.h  PathArray.h  PathRequest.h  PathRequestRequest.h  PathRequestResponse.h  ReachGoalAction.h  ReachGoalActionFeedback.h  ReachGoalActionGoal.h  ReachGoalActionResult.h  ReachGoalFeedback.h  ReachGoalGoal.h  ReachGoalResult.h  TargetVelocityAction.h  TargetVelocityActionFeedback.h  TargetVelocityActionGoal.h  TargetVelocityActionResult.h  TargetVelocityFeedback.h  TargetVelocityGoal.h  TargetVelocityResult.h
devel/include/dreambot_examples/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  GetTransform.h  GetTransformRequest.h  GetTransformResponse.h
devel/include/dreambot_tkinter/: BoolInt.h  BoolString.h
devel/lib/astar/: astar
devel/lib/dreambot/: calculate_args.py  fuzzy_leader.py  fuzzy_wavepoints.py  leader_switch_combine.py  path_generator.py  path_service_client.py  velocity_to_odometry.py
devel/lib/dreambot_data/: slave_path.py
devel/lib/dreambot_examples/: simple_service_client.py
devel/lib/dreambot_gui/: simple_gui.py
devel/lib/dreambot_tkinter/: tkinter_ex1.py  tkinter_gui_test1.py
devel/lib/gazebo_mecanum_plugins/: gazebo_mecanum_plugin_pid
devel/lib/hector_compressed_map_transport/: map_to_image_node
devel/lib/hector_geotiff/: geotiff_node  geotiff_saver
devel/lib/hector_map_server/: hector_map_server
devel/lib/hector_trajectory_server/: hector_trajectory_server
devel/lib/masterbot_fuzzy/: fuzzy_continous.py  fuzzy_matlab.py  fuzzy_wavepoints.py  path_generator.py
devel/lib/masterbot_navigation/: navigate_goal.py  path_generate.py  pose_subscriber.py
devel/lib/masterbot_odometry/: imu_republisher_node.py  masterbot_pidtuner.py  masterbotpid.py  tf_kalman_node.py  tf_masterbot.py  tf_republisher_node.py
devel/lib/masterbot_physical/: goal_pose.py  master_lidar_filter.py
devel/lib/masterbot_teleope_key/: masterbot_teleope_key.py
devel/lib/pkgconfig/: astar.pc  dreambot.pc  dreambot_data.pc  dreambot_description.pc  dreambot_examples.pc  dreambot_fuzzy.pc  dreambot_gui.pc  dreambot_tkinter.pc  (+44 more)
log/: latest_list
src/dreambot/: CMakeLists.txt  package.xml
src/dreambot/action/: TargetVelocity.action
src/dreambot/launch/: calculate_params.launch  dreambot_fuzzy_navigation.launch  dreambot_fuzzy_physical.launch  dreambot_maze1.launch  dreambot_navigation.launch  dreambot_wall.launch  dreambot_world.launch  master_amcl.launch  slave_amcl.launch
src/dreambot/msg/: CombinedPathStatus.msg
src/dreambot/params/: params.yaml
src/dreambot/rviz/: world.rviz
src/dreambot/service/: PathRequest.srv
src/dreambot/src/: calculate_args.py  calculate_rpm.py  create_path.py  fuzzy_wavepoints.py  leader_switch_combine.py  multi_path.py  odom_filter.py  path_generator.py  path_selector.py  safety.py  velocity_to_odometry.py  wavepoint_generator.py
src/dreambot_data/: CMakeLists.txt
src/dreambot_data/launch/: data_collection.launch
src/dreambot_data/src/: cmd_csv.py  distance.py  slave_path.py
src/dreambot_examples/: CMakeLists.txt  package.xml
src/dreambot_examples/src/: tf_examples.py
src/dreambot_examples/srv/: GetTransform.srv
src/dreambot_gui/: CMakeLists.txt  package.xml
src/dreambot_gui/src/: ros_gui.kv
src/dreambot_tkinter/: CMakeLists.txt  package.xml
src/dreambot_tkinter/msg/: BoolInt.msg  BoolString.msg
src/dreambot_tkinter/src/: tkinter_custom_ex1.py  tkinter_gui_test1.py
src/gazebo_mecanum_plugins/: README.md  package.xml
src/global_path_palanning/: CMakeLists.txt  package.xml
src/masterbot/masterbot_fuzzy/: CMakeLists.txt
src/masterbot/masterbot_fuzzy/rviz/: path.rviz
src/masterbot/masterbot_fuzzy/src/: path_generator.py
src/masterbot/masterbot_navigation/: CMakeLists.txt
src/masterbot/masterbot_navigation/launch/: amcl.launch  costmap.yaml  navigation.launch  test1.launch
src/masterbot/masterbot_navigation/param/: common_costmap.yaml  dwa_planner.yaml  global_costmap.yaml
src/masterbot/masterbot_navigation/rviz/: navigation.rviz  world.rviz
src/masterbot/masterbot_navigation/src/: base_station.py  navigate_goal.py  path_generate.py
src/masterbot/masterbot_odometry/: CMakeLists.txt  package.xml
src/masterbot/masterbot_odometry/config/: ekf.yaml  map.rviz
src/masterbot/masterbot_odometry/launch/: local_localization.launch  master_odometry.launch
src/masterbot/masterbot_odometry/src/: kalman_filter.py  kalman_filter_real.py  master_tf_cal.py  masterbot_pidtuner.py  tf_kalman_node.py  tf_masterbot.py  tf_republisher_node.py
src/masterbot/masterbot_physical/: CMakeLists.txt  package.xml
src/masterbot/masterbot_physical/launch/: costmap.launch  master_robot.launch  move_base.launch  navigation.launch
src/masterbot/masterbot_physical/param/: common_costmap.yaml  global_costmap.yaml  local_costmap.yaml
src/masterbot/masterbot_physical/src/: master_lidar_filter.py
src/masterbot_teleop_key/: CMakeLists.txt
src/slavebot_teleop_key/: CMakeLists.txt
src/zm_robot/slavebot_navigation/: CMakeLists.txt
src/zm_robot/slavebot_navigation/launch/: amcl.launch  move_base.launch  navigation.launch
src/zm_robot/slavebot_navigation/param/: common_costmap.yaml  global_costmap.yaml  local_costmap.yaml
src/zm_robot/slavebot_navigation/rviz/: navigation.rviz
src/zm_robot/slavebot_navigation/src/: navigate_goal.py
src/zm_robot/slavebot_physical/: CMakeLists.txt
src/zm_robot/slavebot_physical/launch/: amcl.launch  move_base.launch  navigation.launch  slave_robot.launch
src/zm_robot/slavebot_physical/param/: common_costmap.yaml  global_costmap.yaml  local_costmap.yaml  move_base.yaml
src/zm_robot/slavebot_physical/src/: slave_lidar_filter.py
src/zm_robot/zm_robot_description/: package.xml
src/zm_robot/zm_robot_description/urdf/: zm_robot.urdf.xacro  zm_robot_plugin.gazebo
src/zm_robot/zm_robot_teleope_key/: CMakeLists.txt  package.xml
(+290 files in other folders)
