<?xml version="1.0"?>
<package format="2">
  <name>zm_robot_description</name>
  <version>0.0.0</version>
  <description>The zm_robot_description package</description>

  
  <maintainer email="root@todo.todo">root</maintainer>


 
  <license>TODO</license>


  
  <buildtool_depend>catkin</buildtool_depend>


  <export>
    

  </export>
</package>
